fixed a bug with z-index not high enough on side-listing id

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ main > section{
 	 height: 600px;
 	 width:200px;
     position: fixed;
+    z-index: 1000;
 }
 
 #side-listing img{
@@ -185,6 +186,17 @@ main > section{
     color: #fafafa;
     width: 100%;
     height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.textarea-input{
+	 background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 250px;
     margin: 5px 0 20px 0;
     border: 1px solid #fafafa;
     border-radius: 2px;
